app.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: sample-golang
  name: sample-golang
