app.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-golang
  namespace: sample-golang
  labels:
    app: sample-golang
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-golang
  template:
    metadata:
      labels:
        app: sample-golang
        version: v1
    spec:
      containers:
        - name: sample-golang
          image: dbojan/sample-golang:0.1
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
