app.svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-golang
  namespace: sample-golang
  labels:
    app: sample-golang
    version: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sample-golang
  type: ClusterIP
