app.se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: sample-golang
  namespace: sample-golang
  labels:
    app: sample-golang
    version: v1
spec:
  hosts:
  - sample-golang.example.com
  # location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  # workloadSelector:
  #   labels:
  #     app: sample-golang
